--- a/QO/Isomeria/IsomeriaPlana.org
+++ b/QO/Isomeria/IsomeriaPlana.org
@@ -202,3 +202,82 @@ Equilíbrio aldo-enólico
 #+end_export
 
 #+end_bclogo
+
+
+
+
+** Exemplos
+
+
+#+begin_question
+\scriptsize
+Os compostos p-nitrotolueno e ácido p-amino benzóico (também conhecido como PABA) possuem a mesma fórmula molecular,\ch{C7H7NO2}, porém apresentam fórmulas estruturais muito diferentes:
+
+#+begin_export latex
+\begin{center}
+\setchemfig{
+    angle increment=30,
+    atom sep=1.67em,
+    double bond sep=0.67ex,
+    bond style={line width=0.1em},
+    cram width=0.8ex,
+    cram dash width=0.1em,
+    cram dash sep=0.2em,
+    arrow style={line width=0.067em},
+    arrow head=-{Triangle},
+    arrow label sep=1ex,
+    cycle radius coeff=0.75,
+    chemfig style={line width=0.1em},
+}
+\chemfig{CH_3-[:270,,1]=_[:330]-[:270]=_[:210](-[:270,,,1]NO_2)-[:150]%
+=_[:90](-[:30])} \qquad \qquad \chemfig{O=[:330](-[:30,,,1]OH)-[:270]=_[:330]-[:270]=_[:210](%
+-[:270,,,1]NH_2)-[:150]=_[:90](-[:30])}
+\end{center}
+#+end_export
+
+
+Suas propriedades também diferem bastante. Enquanto o p-nitrotolueno é um composto explosivo, o PABA é o ingrediente ativo de muitos protetores solares. Compostos como o PABA absorvem luz ultravioleta exatamente nos comprimentos de onda mais nocivos às células da pele. Esses compostos apresentam
+isomeria de:
+
+#+ATTR_LATEX: :options  (3)
+#+begin_choice
+\choice metameria.
+\choice posição.
+\choice função.
+\choice tautomeria.
+\choice cadeia.
+#+end_choice
+
+#+end_question 
+
+** 
+
+#+ATTR_LATEX: :options [print=true]
+#+begin_answer
+Na estrutura *A* o grupo funcional corresponde a grupo nitro e na estrutura *B* temos o grupo ácido carboxílico e o radical amino ambas as estruturas tem isomeria de função. Mesma fórmula molecular e diferentes funções orgânicas.
+
+#+begin_export latex
+\begin{center}
+\setchemfig{
+    angle increment=30,
+    atom sep=1.67em,
+    double bond sep=0.67ex,
+    bond style={line width=0.1em},
+    cram width=0.8ex,
+    cram dash width=0.1em,
+    cram dash sep=0.2em,
+    arrow style={line width=0.067em},
+    arrow head=-{Triangle},
+    arrow label sep=1ex,
+    cycle radius coeff=0.75,
+    chemfig style={line width=0.1em},
+}
+\chemname{\chemfig{CH_3-[:270,,1]=_[:330]-[:270]=_[:210](-[:270,,,1]NO_2)-[:150]%
+=_[:90](-[:30])}}{A}\qquad \qquad \chemname{\chemfig{O=[:330](-[:30,,,1]OH)-[:270]=_[:330]-[:270]=_[:210](%
+-[:270,,,1]NH_2)-[:150]=_[:90](-[:30])}}{B}
+\end{center}
+#+end_export
+
+
+
+#+end_answer
